--- a/app.json
+++ b/app.json
@@ -32,6 +32,14 @@
       "capabilities": [
         "meter_power"
       ],
+      "capabilitiesOptions": {
+        "meter_power": {
+          "units": "m3",
+          "title": {
+            "en": "Water"
+          }
+        }
+      },
       "zigbee": {
         "manufacturerName": "Develco",
         "productId": [
@@ -44,18 +52,17 @@
               3,
               5
             ],
-            "bindings": [
-              1
-            ]
+            "bindings": []
           },
           "2": {
             "clusters": [
               0,
               3,
-              1794
+              1794,
+              2820
             ],
             "bindings": [
-              10
+              1794
             ]
           }
         },
@@ -69,7 +76,21 @@
       "images": {
         "large": "/drivers/watermeter_driver/assets/images/large.png",
         "small": "/drivers/watermeter_driver/assets/images/small.png"
-      }
+      },
+      "settings": [
+        {
+          "id": "pollInterval",
+          "type": "number",
+          "label": {
+            "en": "Poll interval"
+          },
+          "value": 10,
+          "min": 1,
+          "units": {
+            "en": "minutes"
+          }
+        }
+      ]
     }
   ]
 }
