--- a/app.json
+++ b/app.json
@@ -22,6 +22,13 @@
     "name": "Tor Niklas Strøm",
     "email": "torniklas@outlook.com"
   },
+  "contributors": {
+    "developers": [
+      {
+        "name": "Vegard Fladby",
+        "email": "vegard.fladby@gmail.com"
+      }
+    ],
   "drivers": [
     {
       "id": "watermeter_driver",
